Bug fix: displayformat="alignright" not working

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -506,6 +506,9 @@ span.inlinebtn:hover {
   font-size: 1em;
   display: inline;
 }
+.textright {
+  text-align: right;
+}
 #GB_window {
     box-shadow: 1px 3px 8px 0 rgba(0,0,0,0.65);
     border: 0;
